--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,31 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".splash"
+    tools:context=".MainActivity"
     android:background="#050625"
-    android:gravity="center"
-    android:orientation="vertical"
+
+    android:orientation="horizontal"
     >
-
-
-
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="스터디용 NFC 태그 타이머"
-        android:textColor="#ED6623"
+        android:text="<12월24일"/>
 
-        android:textSize="13dp"
-
-        />
     <TextView
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Magnetimer"
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"/>
+
+        android:text="12월 25일"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="12월26일>"
+        />
+
+
+
+
+
 
 
 
