--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,27 +7,73 @@
     tools:context=".MainActivity"
     android:background="#050625"
 
-    android:orientation="horizontal"
+    android:orientation="vertical"
     >
 
-    <TextView
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="<12월24일"/>
+        android:layout_gravity="top"
+        android:layout_margin="20dp"
+        >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:fontFamily="@font/suit"
+            android:textFontWeight="900"
+            android:textColor="@color/white"
+            android:text="< 12월24일"/>
 
-        android:text="12월 25일"/>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:fontFamily="@font/suit"
+          android:textFontWeight="900"
+          android:textColor="#ED6653"
+          android:text="12월 25일"
+          android:layout_centerInParent="true"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+          />
 
-        android:text="12월26일>"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:fontFamily="@font/suit"
+            android:textFontWeight="900"
+            android:textColor="@color/white"
+            android:text="12월26일 >"
+            />
+    </RelativeLayout>
+
+
+    <View
+        android:id="@+id/ellipse_1"
+        android:layout_width="254dp"
+        android:layout_height="254dp"
+        android:layout_gravity="center"
+        android:background="@drawable/eclipse_1"
+        android:layout_marginTop="45dp"
+    android:layout_margin="20dp"
         />
 
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
+
+        android:text="시작"
+        android:fontFamily="@font/suit"
+        android:textFontWeight="900"
+        android:textSize="24dp"
+
+        android:backgroundTint="#ED6653"
+
+        />
 
 
 
