middle icon edit

--- a/app/src/main/res/drawable/eclipse_1.xml
+++ b/app/src/main/res/drawable/eclipse_1.xml
@@ -1,53 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <vector
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:aapt="http://schemas.android.com/aapt"
-        android:width="254dp"
-        android:height="254dp"
-        android:viewportWidth="254"
-        android:viewportHeight="254"
-        >
-        <group>
-            <clip-path
-                android:pathData="M254 127C254 197.14 197.14 254 127 254C56.8598 254 0 197.14 0 127C0 56.8598 56.8598 0 127 0C197.14 0 254 56.8598 254 127Z"
-                />
-            <group
-                android:translateX="0.5"
-                android:translateY="-0.5"
-                android:pivotX="127"
-                android:pivotY="127"
-                android:scaleX="2.828"
-                android:scaleY="2.828"
-                android:rotation="45"
-                >
-                <path
-                    android:pathData="M0 0V254H254V0"
-                    >
-                    <aapt:attr name="android:fillColor">
-                        <gradient
-                            android:type="linear"
-                            android:startX="63.5"
-                            android:startY="127"
-                            android:endX="190.5"
-                            android:endY="127"
-                            >
-                            <item
-                                android:color="#00050626"
-                                android:offset="0"
-                                />
-                            <item
-                                android:color="#0070F3"
-                                android:offset="1"
-                                />
-                            <item
-                                android:color="#0070F3"
-                                android:offset="1"
-                                />
-                        </gradient>
-                    </aapt:attr>
-                </path>
-            </group>
-        </group>
-    </vector>
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="#050626" />
+            <size android:width="350dp" android:height="350dp" />
+        </shape>
+    </item>
+
+</layer-list>
