--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
             android:fontFamily="@font/suit"
             android:textFontWeight="900"
             android:textColor="@color/white"
-            android:text="< 12월24일"/>
+            android:text="< 12월24일"
+            />
 
       <TextView
           android:layout_width="wrap_content"
@@ -34,7 +35,6 @@
           android:textColor="#ED6653"
           android:text="12월 25일"
           android:layout_centerInParent="true"
-
           />
 
         <TextView
@@ -54,9 +54,9 @@
         android:layout_width="254dp"
         android:layout_height="254dp"
         android:layout_gravity="center"
-        android:background="@drawable/eclipse_1"
         android:layout_marginTop="45dp"
-    android:layout_margin="20dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/eclipse_1"
         />
 
 
@@ -65,12 +65,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="20dp"
-
         android:text="시작"
         android:fontFamily="@font/suit"
         android:textFontWeight="900"
         android:textSize="24dp"
-
         android:backgroundTint="#ED6653"
 
         />
