--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context="MainActivity"
     android:background="#050625"
     android:orientation="vertical"
     >
@@ -23,8 +23,9 @@
             android:fontFamily="@font/suit"
             android:textFontWeight="900"
             android:textColor="@color/white"
-            android:text="< 12월24일"
+            android:text="&lt; 12월24일"
             />
+
 
       <TextView
           android:layout_width="wrap_content"
@@ -69,7 +70,7 @@
         android:textFontWeight="900"
         android:textSize="24dp"
         android:backgroundTint="#ED6653"
-
+        android:id="@+id/Timestart"
         />
 
 
