--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_margin="20dp"
         >
 
-        <TextView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -24,9 +24,10 @@
             android:textFontWeight="900"
             android:textColor="@color/white"
             android:text="< 12월24일"
+            android:background="#00ff0000"
             />
 
-      <TextView
+      <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/suit"
@@ -34,9 +35,10 @@
           android:textColor="#ED6653"
           android:text="12월 25일"
           android:layout_centerInParent="true"
+          android:background="#00ff0000"
           />
 
-        <TextView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -44,19 +46,39 @@
             android:textFontWeight="900"
             android:textColor="@color/white"
             android:text="12월26일 >"
+            android:background="#00ff0000"
             />
     </RelativeLayout>
 
 
-    <View
-        android:id="@+id/ellipse_1"
-        android:layout_width="254dp"
-        android:layout_height="254dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="45dp"
-        android:layout_margin="20dp"
-        android:background="@drawable/eclipse_1"
-        />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <View
+            android:id="@+id/ellipse_1"
+            android:layout_width="240dp"
+            android:layout_height="240dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="45dp"
+            android:layout_margin="20dp"
+            android:background="@drawable/eclipse"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="30dp"/>
+        <TextView
+            android:layout_width="225dp"
+            android:layout_height="225dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/eclipse2"
+            android:text="00:00:00"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="40dp"/>
+    </RelativeLayout>
+
 
 
     <Button
@@ -72,6 +94,159 @@
 
         />
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:id="@+id/first">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:text="과목명"
+                android:textColor="@color/white"
+                android:fontFamily="@font/suit"
+                android:textSize="24dp"
+
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00:00"
+                android:layout_centerInParent="true"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                android:fontFamily="@font/suit"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="삭제"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:backgroundTint="#00ff0000"
+                android:textColor="#ED6653"
+                android:fontFamily="@font/suit"
+                android:textFontWeight="900"
+                />
+
+        </RelativeLayout>
+
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:id="@+id/second"
+            android:layout_marginTop="15dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:text="과목명"
+                android:textColor="@color/white"
+                android:fontFamily="@font/suit"
+                android:textSize="24dp"
+
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00:00"
+                android:layout_centerInParent="true"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                android:fontFamily="@font/suit"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="삭제"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:backgroundTint="#00ff0000"
+                android:textColor="#ED6653"
+                android:fontFamily="@font/suit"
+                android:textFontWeight="900"
+                />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:id="@+id/third"
+            android:layout_marginTop="15dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:text="과목명"
+                android:textColor="@color/white"
+                android:fontFamily="@font/suit"
+                android:textSize="24dp"
+
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00:00"
+                android:layout_centerInParent="true"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                android:fontFamily="@font/suit"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="삭제"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:backgroundTint="#00ff0000"
+                android:textColor="#ED6653"
+                android:fontFamily="@font/suit"
+                android:textFontWeight="900"
+                />
+
+        </RelativeLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </LinearLayout>
 
 
 
