--- a/app/src/main/res/drawable/gradient2.xml
+++ b/app/src/main/res/drawable/gradient2.xml
@@ -2,9 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:type="radial"
-        android:gradientRadius="225dp"
-        android:centerX="112.5dp"
-        android:centerY="112.5dp"
-        android:startColor="#FF4081"
-        android:endColor="#3F51B5"/>
+        android:gradientRadius="240dp"
+        android:centerX="120dp"
+        android:centerY="120dp"
+        android:startColor="#0070F3"
+        android:endColor="#00050626"/>
+
 </shape>
