--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
             android:textFontWeight="900"
             android:textColor="@color/white"
             android:text="12월26일 >"
+            android:backgroundTint="#00ff0000"
             />
     </RelativeLayout>
 
@@ -227,42 +228,8 @@
 
             </RelativeLayout>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </LinearLayout>
 
-
     </ScrollView>
-
-
-
-
-
-
 
 </LinearLayout>
