--- a/app/src/main/res/layout/activity_timer_on.xml
+++ b/app/src/main/res/layout/activity_timer_on.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".timer_on"
     android:orientation="horizontal"
+    android:padding="35dp"
     android:background="#050625">
 
 
@@ -14,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="25dp"
+
         >
         <View
             android:id="@+id/ellipse_1"
@@ -25,20 +26,20 @@
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="30dp"/>
+
         <TextView
-            android:fontFamily="@font/suit"
             android:layout_width="225dp"
             android:layout_height="225dp"
             android:layout_centerInParent="true"
             android:background="@drawable/eclipse2"
-            android:text="00:00:00"
-            android:textFontWeight="900"
+            android:fontFamily="@font/suit"
             android:gravity="center"
+            android:text="00:00:00"
             android:textColor="@color/white"
-            android:textSize="40dp"
+            android:textFontWeight="900"
 
 
-            />
+            android:textSize="40dp" />
 
     </RelativeLayout>
 
@@ -84,12 +85,12 @@
 
 
         <TextView
+            android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/subject"
             android:text="현재 시간:"
-            android:textSize="22dp"
-            android:id="@+id/time"/>
+            android:textSize="22dp" />
 
 
         <TextView
@@ -118,7 +119,6 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="25dp"
         >
         <View
             android:id="@+id/ellipse_2"
