--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:fontFamily="@font/suit"
             android:textFontWeight="900"
             android:textColor="@color/white"
-            android:text="< 12월24일"
+            android:text="12월24일"
             android:background="#00ff0000"
             android:layout_weight="1"
             />
