--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,51 +7,49 @@
     tools:context=".MainActivity"
     android:background="#050625"
     android:orientation="vertical"
-    android:layout_gravity="center"
     >
 
-    <LinearLayout
-
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top">
+        android:layout_gravity="top"
+        android:layout_margin="20dp"
+        >
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:layout_alignParentLeft="true"
             android:fontFamily="@font/suit"
             android:textFontWeight="900"
             android:textColor="@color/white"
-            android:text="12월24일"
+            android:text="&lt; 12월24일"
             android:background="#00ff0000"
-            android:layout_weight="1"
             />
 
-      <Button
+
+        <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/suit"
           android:textFontWeight="900"
           android:textColor="#ED6653"
           android:text="12월 25일"
-
+          android:layout_centerInParent="true"
           android:background="#00ff0000"
-          android:layout_weight="1"
           />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:layout_alignParentRight="true"
             android:fontFamily="@font/suit"
             android:textFontWeight="900"
             android:textColor="@color/white"
             android:text="12월26일 >"
             android:backgroundTint="#00ff0000"
-            android:layout_weight="1"
             />
-    </LinearLayout>
+    </RelativeLayout>
 
 
 
@@ -95,6 +93,7 @@
         android:textFontWeight="900"
         android:textSize="24dp"
         android:backgroundTint="#ED6653"
+        android:id="@+id/timeStart"
 
         />
 
@@ -195,6 +194,46 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
                 android:id="@+id/third"
+                android:layout_marginTop="15dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="20dp"
+                    android:text="과목명"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/suit"
+                    android:textSize="24dp"
+
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="00:00:00"
+                    android:layout_centerInParent="true"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/suit"
+                    />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="삭제"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentRight="true"
+                    android:backgroundTint="#00ff0000"
+                    android:textColor="#ED6653"
+                    android:fontFamily="@font/suit"
+                    android:textFontWeight="900"
+                    />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border"
+                android:id="@+id/force"
                 android:layout_marginTop="15dp">
 
                 <TextView
