--- a/app/src/main/res/drawable/lock_open.xml
+++ b/app/src/main/res/drawable/lock_open.xml
@@ -4,7 +4,8 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="960"
-    android:viewportHeight="960">
+    android:viewportHeight="960"
+    >
 
   <path
       android:fillColor="@android:color/white"
