--- a/app/src/main/res/layout/activity_timer_on.xml
+++ b/app/src/main/res/layout/activity_timer_on.xml
@@ -16,17 +16,18 @@
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="25dp"
         >
-        <View
+        <ImageView
             android:id="@+id/ellipse_1"
             android:layout_width="240dp"
             android:layout_height="240dp"
             android:layout_gravity="center"
-            android:background="@drawable/eclipse"
+            android:background="@drawable/nfc_off"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="30dp"/>
 
         <TextView
+            android:id="@+id/stopWatch"
             android:layout_width="225dp"
             android:layout_height="225dp"
             android:layout_centerInParent="true"
@@ -35,7 +36,6 @@
             android:gravity="center"
             android:text="00:00:00"
             android:textColor="@color/white"
-            android:id="@+id/stopWatch"
             android:textFontWeight="900"
             android:textSize="40dp" />
 
@@ -53,16 +53,17 @@
 
 
     <TextView
+        android:id="@+id/lockText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="딴 짓 방지 켜짐"
         android:layout_above="@+id/text"
         android:layout_centerInParent="true"
         android:layout_marginBottom="50dp"
-        android:textColor="@color/white"
         android:fontFamily="@font/suit"
+        android:text="딴 짓 방지 꺼짐"
+        android:textColor="@color/white"
         android:textFontWeight="900"
-        android:textSize="20dp"/>
+        android:textSize="20dp" />
 
 
     <RelativeLayout
@@ -119,28 +120,28 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="25dp"
         >
-        <View
+        <ImageView
             android:id="@+id/ellipse_2"
             android:layout_width="240dp"
             android:layout_height="240dp"
             android:layout_gravity="center"
-            android:background="@drawable/eclipse"
+            android:background="@drawable/nfc_off"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="30dp"/>
+
         <TextView
-            android:fontFamily="@font/suit"
+            android:id="@+id/isNfcText"
             android:layout_width="225dp"
             android:layout_height="225dp"
             android:layout_centerInParent="true"
             android:background="@drawable/eclipse2"
-            android:text="NFC 태그 완료"
+            android:fontFamily="@font/suit"
             android:gravity="center"
+            android:text="NFC 태그 미완료"
             android:textColor="@color/white"
-            android:textSize="32dp"
             android:textFontWeight="900"
-
-            />
+            android:textSize="32dp" />
 
     </RelativeLayout>
 
