--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,15 +123,15 @@
                     android:textSize="24dp"
 
                     />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="00:00:00"
                     android:layout_centerInParent="true"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
                     android:fontFamily="@font/suit"
-                    />
+                    android:text="00:00:00"
+                    android:textColor="@color/white"
+                    android:textSize="20dp" />
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
