--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,17 +27,16 @@
             android:background="#00ff0000"
             />
 
-
         <Button
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:fontFamily="@font/suit"
-          android:textFontWeight="900"
-          android:textColor="#ED6653"
-          android:text="12월 25일"
-          android:layout_centerInParent="true"
-          android:background="#00ff0000"
-          />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/suit"
+            android:textFontWeight="900"
+            android:textColor="#ED6653"
+            android:text="12월 25일"
+            android:layout_centerInParent="true"
+            android:background="#00ff0000"
+            />
 
         <Button
             android:layout_width="wrap_content"
@@ -49,9 +48,8 @@
             android:text="12월26일 >"
             android:backgroundTint="#00ff0000"
             />
+
     </RelativeLayout>
-
-
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -81,8 +79,6 @@
             android:textSize="40dp" />
     </RelativeLayout>
 
-
-
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -94,183 +90,12 @@
         android:textSize="24dp"
         android:backgroundTint="#ED6653"
         android:id="@+id/timeStart"
-
         />
 
-    <ScrollView
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:id="@+id/first">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="20dp"
-                    android:text="과목명"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/suit"
-                    android:textSize="24dp"
-
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:fontFamily="@font/suit"
-                    android:text="00:00:00"
-                    android:textColor="@color/white"
-                    android:textSize="20dp" />
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="삭제"
-                    android:layout_centerInParent="true"
-                    android:layout_alignParentRight="true"
-                    android:backgroundTint="#00ff0000"
-                    android:textColor="#ED6653"
-                    android:fontFamily="@font/suit"
-                    android:textFontWeight="900"
-                    />
-
-            </RelativeLayout>
-
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:id="@+id/second"
-                android:layout_marginTop="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="20dp"
-                    android:text="과목명"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/suit"
-                    android:textSize="24dp"
-
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="00:00:00"
-                    android:layout_centerInParent="true"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:fontFamily="@font/suit"
-                    />
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="삭제"
-                    android:layout_centerInParent="true"
-                    android:layout_alignParentRight="true"
-                    android:backgroundTint="#00ff0000"
-                    android:textColor="#ED6653"
-                    android:fontFamily="@font/suit"
-                    android:textFontWeight="900"
-                    />
-
-            </RelativeLayout>
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:id="@+id/third"
-                android:layout_marginTop="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="20dp"
-                    android:text="과목명"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/suit"
-                    android:textSize="24dp"
-
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="00:00:00"
-                    android:layout_centerInParent="true"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:fontFamily="@font/suit"
-                    />
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="삭제"
-                    android:layout_centerInParent="true"
-                    android:layout_alignParentRight="true"
-                    android:backgroundTint="#00ff0000"
-                    android:textColor="#ED6653"
-                    android:fontFamily="@font/suit"
-                    android:textFontWeight="900"
-                    />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:id="@+id/force"
-                android:layout_marginTop="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="20dp"
-                    android:text="과목명"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/suit"
-                    android:textSize="24dp"
-
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="00:00:00"
-                    android:layout_centerInParent="true"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:fontFamily="@font/suit"
-                    />
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="삭제"
-                    android:layout_centerInParent="true"
-                    android:layout_alignParentRight="true"
-                    android:backgroundTint="#00ff0000"
-                    android:textColor="#ED6653"
-                    android:fontFamily="@font/suit"
-                    android:textFontWeight="900"
-                    />
-
-            </RelativeLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
+        android:layout_height="match_parent"
+        />
 
 </LinearLayout>
