--- a/app/src/main/res/layout/activity_timer_on.xml
+++ b/app/src/main/res/layout/activity_timer_on.xml
@@ -84,6 +84,7 @@
             android:fontFamily="@font/suit"
             android:text="과목:"
             android:textFontWeight="900"
+            android:textColor="#fff"
             android:textSize="24dp" />
 
         <TextView
@@ -92,6 +93,7 @@
             android:layout_below="@+id/subjectEditText"
             android:text="현재 시간:"
             android:textSize="22dp"
+            android:textColor="#fff"
             android:id="@+id/time"/>
 
         <TextView
