--- a/app/src/main/res/layout/activity_timer_on.xml
+++ b/app/src/main/res/layout/activity_timer_on.xml
@@ -36,9 +36,9 @@
             android:gravity="center"
             android:text="00:00:00"
             android:textColor="@color/white"
+
+
             android:textFontWeight="900"
-
-
             android:textSize="40dp" />
 
     </RelativeLayout>
@@ -87,9 +87,8 @@
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_toRightOf="@+id/subject"
-            android:backgroundTint="#00f00000"
             android:background="@drawable/edit"
-
+            android:layout_marginLeft="3dp"
             />
 
 
@@ -98,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/subject"
-            android:text="현재 시간:"
+            android:text="현재 위치:"
             android:textSize="22dp" />
 
 
@@ -118,7 +117,6 @@
         android:backgroundTint="#ED6653"
         android:layout_marginTop="20dp"
         android:textSize="25dp"
-
         android:text="종료"/>
 
 
@@ -138,19 +136,19 @@
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="30dp"/>
+
         <TextView
-            android:fontFamily="@font/suit"
             android:layout_width="225dp"
             android:layout_height="225dp"
             android:layout_centerInParent="true"
             android:background="@drawable/eclipse2"
-            android:text="NFC 미 태그"
+            android:fontFamily="@font/suit"
             android:gravity="center"
+            android:text="NFC 미 태그"
             android:textColor="@color/white"
-            android:textSize="32dp"
             android:textFontWeight="900"
 
-            />
+            android:textSize="32dp" />
 
     </RelativeLayout>
 
