--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:fontFamily="@font/suit"
             android:textFontWeight="900"
             android:textColor="@color/white"
-            android:text="< 12월24일"
+            android:text="12월24일"
             android:background="#00ff0000"
             android:layout_weight="1"
             />
@@ -47,7 +47,7 @@
             android:fontFamily="@font/suit"
             android:textFontWeight="900"
             android:textColor="@color/white"
-            android:text="12월26일 >"
+            android:text="12월26일"
             android:backgroundTint="#00ff0000"
             android:layout_weight="1"
             />
@@ -100,7 +100,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
