--- a/app/src/main/res/layout/activity_timer_on.xml
+++ b/app/src/main/res/layout/activity_timer_on.xml
@@ -83,12 +83,12 @@
             android:textFontWeight="900"
             android:textSize="24dp" />
 
-        <Button
+        <View
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_toRightOf="@+id/subject"
             android:background="@drawable/edit"
-            android:layout_marginLeft="3dp"
+            android:layout_marginLeft="40dp"
             />
 
 
