--- a/app/src/main/res/layout/activity_timer_on.xml
+++ b/app/src/main/res/layout/activity_timer_on.xml
@@ -71,10 +71,12 @@
 
         <!-- 과목 입력칸 -->
         <EditText
+            android:textSize="22dp"
             android:id="@+id/subjectEditText"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="26dp"
             android:layout_toRightOf="@+id/subject"
+            android:background="@null"
             android:textColor="@color/white"/>
 
         <TextView
@@ -91,6 +93,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/subjectEditText"
+            android:text="현재 시간:"
             android:textSize="22dp"
             android:textColor="#fff"
             android:id="@+id/time"/>
@@ -139,7 +142,7 @@
             android:background="@drawable/eclipse2"
             android:fontFamily="@font/suit"
             android:gravity="center"
-            android:text="NFC 미 태그"
+            android:text="NFC 태그 미완료"
             android:textColor="@color/white"
             android:textFontWeight="900"
             android:textSize="32dp" />
