--- a/app/src/main/res/layout/activity_timer_on.xml
+++ b/app/src/main/res/layout/activity_timer_on.xml
@@ -142,7 +142,7 @@
             android:background="@drawable/eclipse2"
             android:fontFamily="@font/suit"
             android:gravity="center"
-            android:text="NFC 태그 미완료"
+            android:text="NFC 미태그"
             android:textColor="@color/white"
             android:textFontWeight="900"
             android:textSize="32dp" />
